test/semantic_errors/undefined_var.lat
// Test: Undefined variable
// Expected error: Undeclared variable 'y'

munus main() {
    x: integer = y
}
